--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,15 +1,15 @@
 .background {
-	background-color: #668284;
+  background-color: #668284;
 }
 
 .me {
-  	display: block;
-  	margin: 150px auto;
-  	margin-bottom: 1em;
-  	width: 200px;
-  	height: 200px;
-  	border-radius: 50%;
-  	position: relative;
+    display: block;
+    margin: 150px auto;
+    margin-bottom: 1em;
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+    position: relative;
 }
 
 h1 {
@@ -28,3 +28,46 @@ h3 {
   font-size: 18px;
   color: #222
 }
+
+.social {
+  text-align: center;
+  font-size: 32px;
+  color: white;
+  overflow: hidden;
+}
+
+.social a {
+  text-decoration: none;
+  color: inherit;
+}
+
+i {
+  margin:.5em;
+}
+
+#twitter:hover {
+      color: #77DDF6;
+}
+
+#github:hover {
+  color: black;
+}
+
+#stack:hover {
+  color: #ED780E;
+}
+
+#linkedin:hover {
+  color: #0177B5;
+}
+
+#facebook:hover {
+  color: #3A5795;
+}
+
+#mail:hover {
+  color: #d14836;  
+}
+
+
+
